--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Mako==1.0.6
 requests==2.22.0
 celery==3.1.25
 django-celery==3.2.1
+djangorestframework==3.12.1
 python-json-logger==0.1.7
 whitenoise==3.3.0
 six==1.11.0
